--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
      
 }
 .container{
-    border: 2px solid lightgray;
     border-radius: 12px;
     background: whitesmoke;
     padding: 2rem;
@@ -20,17 +19,18 @@
 
 .nav_container a{
     position: relative;
-    left: 68%;
+    left: 62.5%;
     text-decoration: none;
 }
-.logo_div{
-    float: left;
+.logo_div p{
+   display: inline;
 }
 
 .logo{
-    width: 1.7rem;
-    height: 1.7rem;
+    width: 2rem;
+    height: 2rem;
     padding: 0.2em;
+    vertical-align: middle;
    
 }
 .profile_image{
